stylesheets/commons/Tabs.scss
/* ... */
/* STATIC TABS */
.tabs-static {
	overflow: visible;

	.tabs-nav-wrapper {
		margin: 0.25rem 0;
	}

	.dropdown-widget {
		display: none;
		margin-bottom: 0.25rem;
	}

	@media ( max-width: 767px ) {
		&[ data-mobile-dropdown-ready ] > .tabs-nav-wrapper {
			display: none;
		}

		&[ data-mobile-dropdown-ready ] > .dropdown-widget {
			display: block;
		}
	}

	html.client-nojs & {
		.tabs-nav-wrapper {
			display: flex;
		}

		.dropdown-widget {
			display: none;
		}
	}

	.dropdown-widget--form .dropdown-widget__toggle {
		i {
			width: 1rem;
			height: 1rem;
			flex-shrink: 0;
			align-content: center;
		}

		.tabs-static-dropdown-icon {
			display: inline-block;
			width: 1.5rem;
			height: 1.5rem;
			flex-shrink: 0;
			background-size: contain;
			background-repeat: no-repeat;
			background-position: center;

			.theme--light & {
				background-image: url( data:image/svg+xml,%3Csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20viewBox=%270%200%2024%2024%27%3E%3Cpath%20d=%27M17.625,7.75H4.375C4.16791,7.75,4,7.58209,4,7.375V6.375C4,6.16791,4.16791,6,4.375,6H17.625C17.8321,6,18,6.16791,18,6.375V7.375C18,7.58209,17.8321,7.75,17.625,7.75ZM19.625,12.75H6.375C6.16791,12.75,6,12.5821,6,12.375V11.375C6,11.1679,6.16791,11,6.375,11H19.625C19.8321,11,20,11.1679,20,11.375V12.375C20,12.5821,19.8321,12.75,19.625,12.75ZM17.625,17.75H4.375C4.16791,17.75,4,17.5821,4,17.375V16.375C4,16.1679,4.16791,16,4.375,16H17.625C17.8321,16,18,16.1679,18,16.375V17.375C18,17.5821,17.8321,17.75,17.625,17.75Z%27%20fill=%27%23121212%27/%3E%3C/svg%3E );
			}

			.theme--dark & {
				background-image: url( data:image/svg+xml,%3Csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20viewBox=%270%200%2024%2024%27%3E%3Cpath%20d=%27M17.625,7.75H4.375C4.16791,7.75,4,7.58209,4,7.375V6.375C4,6.16791,4.16791,6,4.375,6H17.625C17.8321,6,18,6.16791,18,6.375V7.375C18,7.58209,17.8321,7.75,17.625,7.75ZM19.625,12.75H6.375C6.16791,12.75,6,12.5821,6,12.375V11.375C6,11.1679,6.16791,11,6.375,11H19.625C19.8321,11,20,11.1679,20,11.375V12.375C20,12.5821,19.8321,12.75,19.625,12.75ZM17.625,17.75H4.375C4.16791,17.75,4,17.5821,4,17.375V16.375C4,16.1679,4.16791,16,4.375,16H17.625C17.8321,16,18,16.1679,18,16.375V17.375C18,17.5821,17.8321,17.75,17.625,17.75Z%27%20fill=%27%23ffffff%27/%3E%3C/svg%3E );
			}
		}

		.dropdown-widget__label {
			> i {
				display: inline-flex;
				align-items: center;
				justify-content: center;
				width: 1rem;
				height: 1rem;
				flex-shrink: 0;
				margin: 0 0.5rem;

				.theme--light & {
					color: var( --clr-secondary-39 );
				}

				.theme--dark & {
					color: var( --clr-secondary-90 );
				}
			}
		}
	}

	.dropdown-widget--form .dropdown-widget__menu {
		ul {
			list-style: none;
			margin: 0;
			padding: 0;
		}

		li {
			> a,
			> span {
				display: flex;
				align-items: center;
				gap: 0.25rem;
				width: 100%;
				padding: 0.5rem 0.75rem;
				margin: 0.25rem;
				font-size: 0.875rem;
				font-weight: bold;
				border-radius: 0.25rem;
				color: var( --dropdown-item-color );
				text-decoration: none;

				.tabs-static-tab-icon {
					width: 1rem;
					height: 1rem;
					display: inline-flex;
					align-items: center;
					justify-content: center;
				}

				&.new {
					.theme--light & {
						color: var( --clr-semantic-negative-40 ) !important;
					}

					.theme--dark & {
						color: var( --clr-semantic-negative-80 ) !important;
					}
				}
			}

			> span {
				cursor: default;
			}

			> a:hover,
			&.active > a,
			&.active > span {
				background-color: var( --dropdown-item-bg );
			}

			.theme--light & {
				&.active {
					a {
						color: var( --clr-secondary-16 ) !important;
					}
				}
			}

			.theme--dark & {
				&.active {
					a {
						color: var( --clr-secondary-100 ) !important;
					}
				}
			}

			> ul {
				li {
					> a,
					> span {
						padding-left: calc( 0.75rem + ( var( --tabs-static-menu-level, 1 ) * 1rem ) );
						position: relative;

						i {
							position: absolute;
							left: calc( ( var( --tabs-static-menu-level, 1 ) - 1 ) * 1rem + 0.75rem );
							top: 50%;
							transform: translateY( -50% );

							.theme--light & {
								color: var( --clr-secondary-39 );
							}

							.theme--dark & {
								color: var( --clr-secondary-80 );
							}
						}
					}
				}
			}

			&:not( :last-child ) > ul {
				padding-bottom: 0.125rem;
				position: relative;

				&::after {
					content: "";
					position: absolute;
					left: 0;
					right: 0;
					height: 1px;

					.theme--light & {
						background-color: var( --clr-on-surface-light-primary-12 );
					}

					.theme--dark & {
						background-color: var( --clr-secondary-39 );
					}
				}
			}
		}
	}

	> .tabs-nav-wrapper .nav-tabs {
		gap: 0.25rem;
	}

	> .tabs-nav-wrapper .nav-tabs li:not( .active ) {
		border: 1px solid !important;
		border-bottom: unset !important;
		border-radius: $tabs-border-radius $tabs-border-radius 0 0;

		.theme--light & {
			border-color: $tabs-border-light !important;
		}

		.theme--dark & {
			border-color: $tabs-border-dark !important;
		}

		&:hover {
			border-color: transparent !important;
		}

		a {
			font-weight: normal;

			&:not( .new ) {
				color: var( --clr-primary ) !important;

				&:hover {
					color: var( --clr-primary ) !important;
				}
			}

			&.new {
				.theme--light & {
					color: var( --clr-semantic-negative-40 ) !important;
				}

				.theme--dark & {
					color: var( --clr-semantic-negative-80 ) !important;
				}
			}

			&:hover {
				.theme--light & {
					background-color: $tabs-bg-hover-light !important;
				}

				.theme--dark & {
					background-color: $tabs-bg-hover-dark !important;
				}
			}
		}
	}

	.tabs-content & {
		> .tabs-nav-wrapper {
			margin-top: 0.75rem;
		}

		> .tabs-nav-wrapper .nav-tabs li {
			min-height: 2.25rem;

			a {
				padding: $tabs-nav-padding-nested;
				min-height: 2.25rem;
			}
		}
	}
}
/* ... */

